# callus_admissions_research

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
data/inputs/: universities.json
src/callus_admissions_research/: __init__.py
src/callus_research/: config.py  logging_utils.py  main.py
src/callus_research/api/: routes.py
src/callus_research/models/: api_requests.py  extract_request.py  extraction.py  fetch.py  llm_adjudication.py  llm_extract.py  llm_retry_request.py  research_result.py  source_bundle.py  source_common.py  source_discovery.py  university.py  verification.py
src/callus_research/prompts/: adjudicator.txt  extractor.txt  source_discovery.txt
src/callus_research/providers/: adk_google_search_provider.py  base.py  discovery_base.py  discovery_factory.py  factory.py  gemini_provider.py  google_custom_search_provider.py  hf_inference_provider.py  openai_provider.py  vertex_ai_search_provider.py
src/callus_research/services/: batch_runner.py  export_results.py  extract_from_html.py  extract_llm.py  extract_rules.py  fetch_browser.py  fetch_html.py  llm_field_adjudicator.py  merge_llm_retry.py  merge_records.py  parse_html.py  research_pipeline.py  research_workflow.py  source_discovery.py  source_fetcher.py  verify_fields.py  verify_rules.py
src/callus_research/storage/: files.py
src/callus_research/workflows/: langgraph_workflow.py
src/scripts/: run_pipeline.py
