[project]
name = "callus-admissions-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anas", email = "91199471+anas-mshaikh@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "huggingface-hub>=1.10.2",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "lxml>=6.0.4",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "rich>=15.0.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
callus-admissions-research = "callus_admissions_research:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "callus_research"
